kubernetes-patient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient
  template:
    metadata:
      labels:
        app: patient
    spec:
      containers:
      - name: patientcontainer
        image: medonii/grimreaper:grimreaper-patient
        imagePullPolicy: Always
        ports:
        - containerPort: 8008
      imagePullSecrets:
      - name: medonii
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient
  ports:
  - port: 8008
    targetPort: 8008
  type: ClusterIP
